mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_mutex_new_wrong_arg_count.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 'new' expects 0 argument(s), but 1 was provided
--> test_scripts/error_cases/semantic_mutex_new_wrong_arg_count.mux:3:11
   |
 3 | Mutex m = Mutex.new(1)
   |           ^^^^^^^^^
   |
= help: Too many arguments. Remove the extra argument(s).
